# esp-usbip-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults  sdkconfig.defaults.m5stack-poe-p4  sdkconfig.defaults.p4-function-ev  sdkconfig.defaults.s3-usb-otg
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  discovery_service.c  discovery_service.h  idf_component.yml  log_server.c  log_server.h  main.c  network_init.c  network_init.h  usb_backend.c  usb_backend.h  usbip_protocol.h  usbip_server.c  usbip_server.h  virtual_cdc.c  virtual_cdc.h  virtual_device.c  virtual_device.h  virtual_harness.c  virtual_harness.h  virtual_perfetto_logic.c  virtual_perfetto_logic.h
scripts/: build-board.sh  idf-env.sh  setup-esp-idf.sh
